bootstrapped and download counter

--- a/endgem/templates/course_manager/add_document.html
+++ b/endgem/templates/course_manager/add_document.html
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>EndGem</title>
-	</head>
-	<body>
+{% extends 'course_manager/base.html' %}
+
+{% block title %}EndGem{% endblock %}
+
+{% block content %}
+	<div>
 		<h1>Add document</h1>
-		<div>
-				{% if course %}
-					<form id="Document_form" method="post" action="/course/{{ course.slug }}/add_document/">
-						{% csrf_token %}
-						{% for hidden in form.hidden_fields %}
-							{{ hidden }}
-						{% endfor %}
-						{% for field in form.visible_fields %}
-							{{ field.errors }}
-							{{ field.help_text }}
-							{{ field }}
-						{% endfor %}
-						<input type="submit" name="submit" value="Create Document">
-					</form>
-				{% else %}
-					<h3>Course doesn't exist</h3>
-				{% endif %}
-		</div>
-	</body>
-</html>
+		{% if course %}
+			<form id="Document_form" method="post" action="/course/{{ course.slug }}/add_file/">
+				{% csrf_token %}
+				{{ form.as_p }}
+				<button type="submit" name="submit" class="btn btn-primary">Add File</button>
+			</form>
+		{% else %}
+			<h3>Course doesn't exist</h3>
+		{% endif %}
+</div>
+{% endblock %}
