--- a/endgem/templates/course_manager/add_course.html
+++ b/endgem/templates/course_manager/add_course.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Add Course</title>
-	</head>
-	<body>
-		<h1>Add a Course</h1>
-		<div>
-			<form id="course_form" method="post" action="/add_course/">
-				{% csrf_token %}
-				{% for hidden in form.hidden_fields %}
-					{{ hidden }}
-				{% endfor %}
-				{% for field in form.visible_fields %}
-					{{ field.errors }}
-					{{ field.help_text }}
-					{{ field }}
-				{% endfor %}
-				<input type="submit" name="submit" value="Create Course">
-			</form>
-		</div>
-	</body>
-</html>
+{% extends 'course_manager/base.html' %}
+
+{% block title %}EndGem{% endblock %}
+
+{% block content %}
+	<h1>Add a Course</h1>
+	<div class="form-group">
+		<form id="course_form" method="post" action="/add_course/">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button name="submit" value="Create Course" class="btn btn-primary">Submit</button>
+		</form>
+	</div>
+{% endblock %}
