--- a/endgem/templates/course_manager/index.html
+++ b/endgem/templates/course_manager/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
+{% extends 'course_manager/base.html' %}
 
-{% load staticfiles %}
+{% block title %}EndGem{% endblock %}
 
-<html>
-<head>
-	<title>EndGem</title>
-</head>
-<body>
-	<div>hey partner! <br /></div>
+{% block content %}
 	{% if courses %}
 	<h3>Course with most downloaded files</h3>
-	<ul>
+	<ul class="list-group">
 		{% for course in courses %}
-			<li><a href="course/{{ course.slug }}">{{ course.name }}</li></a>
+			<li class="list-group-item d-flex justify-content-between align-items-center">
+		      <a href="/course/{{ course.slug }}">{{ course.name }}</a>
+		      <span class="badge badge-primary badge-pill">{{ course.downloads }}</span>
+		    </li>
 		{% endfor %}
 	</ul>
 	{% else %}
@@ -20,9 +18,12 @@
 	{% endif %}
 	{% if documents %}
 	<h3>Most downloaded documents</h3>
-	<ul>
+	<ul class="list-group">
 		{% for document in documents %}
-			<li><a href="#">{{ document.title }}</li></a> <!-- {{ document.url }} -->
+			<li class="list-group-item d-flex justify-content-between align-items-center">
+		      <a href="#">{{ document.title }}</a>
+		      <span class="badge badge-primary badge-pill">{{ document.downloads }}</span>
+		    </li>
 		{% endfor %}
 	</ul>
 	{% else %}
@@ -31,5 +32,4 @@
 	<div>
 		<a href="/add_course">Add Course</a>
 	</div>
-</body>
-</html>
+{% endblock %}
