--- a/endgem/static/css/base.css
+++ b/endgem/static/css/base.css
@@ -1,3 +1,20 @@
 body {
-	background: blue;
+	background: #66ff99;
+}
+
+.navbar {
+	border-radius: 0;
+}
+
+.navbar-header {
+	width: 25%;
+	padding: 0 10%;
+}
+
+.badge {
+	font-size: 2rem;
+}
+
+.doc-name, .course-name {
+	padding: 0 3% 0 3%;
 }
