--- a/endgem/templates/course_manager/base.html
+++ b/endgem/templates/course_manager/base.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="{% static 'js/css/base.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 </head>
 <body>
 <div class="bg-dark">
@@ -35,6 +35,7 @@
       {% endblock %}
   </div>
 </div>
-<script src="{% static "js/jquery.min.js" %}"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/download.js' %}"></script>
 </body>
 </html>
