--- a/endgem/templates/course_manager/documents.html
+++ b/endgem/templates/course_manager/documents.html
@@ -3,25 +3,24 @@
 {% block title %}EndGem{% endblock %}
 
 {% block content %}
-{% if course %}
-		<!-- <h3>{{ course.name }}</h3>
+	{% if course %}
+		<h3>{{ course.name }}</h3>
 		{% if documents %}
-			<ul class="list-group"> -->
-			{% for course in courses %}
-				<!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+			<ul class="list-group">
+			{% for document in documents %}
+				<li class="list-group-item d-flex justify-content-between align-items-center">
 			      <a href="#">{{ document.title }}</a>
 			      <span class="badge badge-primary badge-pill download_count">{{ document.downloads }}</span>
 			      <a class="downloads glyphicon glyphicon-save btn btn-dark" href="/{{ document.title }}/download"></a>
-			    </li> -->
-			    <p>{{ course.name }}</p>
+			    </li>
 			{% endfor %}
 			</ul>
-		<!-- {% else %}
+		{% else %}
 			<strong>No documents currently in this course.</strong>
 		{% endif %}
 	{% else %}
 		The specified course does not exist!
 	{% endif %}
 	<button class="btn btn-dark"><a href="/course/{{ course.slug }}/add_file/">Upload Document</a></button><br>
-	<a href="/">Back to index page</a> -->
+	<a href="/">Back to index page</a>
 {% endblock %}
